--- a/.env.dist
+++ b/.env.dist
@@ -1,11 +1,11 @@
 # Set "DEBUG=False" for production
-DEBUG=True
+DEBUG=False
 
 # Get a secure secret key from https://djecrety.ir
 SECRET_KEY=django-insecure-j8op9)1q8$1&0^s&p*_0%d#pr@w9qj@1o=3#@d=a(^@9@zd@%j
 
 # Don't use "*" for ALLOWED_HOSTS in production
-ALLOWED_HOSTS=www.example.com,example.com,*
+ALLOWED_HOSTS=https://j8pmhphkaq.eu-west-2.awsapprunner.com,*
 
 CSRF_TRUSTED_ORIGINS=
 
